k8s/progressive-delivery/frontend-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-canary
  namespace: reliability-lab
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: canary
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/component: canary
      version: canary
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/component: canary
        version: canary
    spec:
      containers:
        - name: frontend
          image: 393864004024.dkr.ecr.us-east-1.amazonaws.com/frontend:0.2.0-canary
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: reliability-lab
  labels:
    app.kubernetes.io/name: frontend-canary
spec:
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: canary
    version: canary
  ports:
    - name: http
      port: 80
      targetPort: http
